<resources>
    <string name="app_name">Glimpse</string>
    <string name="facebook_app_id">616825308708079</string>
    <string name="fb_login_protocol_scheme">fb616825308708079</string>
    <string name="title_activity_loading">LoadingActivity</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="my_image">my_image</string>
    <string name="HomePage">Home Page</string>
    <string name="movies">Movies</string>
    <string name="tracked">tracked</string>
    <string name="Tracked">Your Tracked Content</string>
    <string name="notifications">Notification Settings</string>
    <string name="suggestions">Suggested Media</string>
    <string name="frequentlyAskedQuestions">Frequently Asked Questions</string>
    <string name="open_drawer">Open navigation drawer</string>
    <string name="close_drawer">Close navigation drawer</string>
</resources>