<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single">
        <item
            android:title="@string/shows"
            android:id="@+id/shows.id"
            android:icon="@drawable/television"/>

        <item
            android:title="@string/movies"
            android:id="@+id/movies.id"
            android:icon="@drawable/television" />

        <item
            android:title="@string/Tracked"
            android:id="@+id/tracked.id"
            android:icon="@drawable/alert"/>

        <item
            android:title="@string/notifications"
            android:id="@+id/notifications.id"
            android:icon="@drawable/notification" />
        <item
            android:title="@string/suggestions"
            android:id="@+id/suggestions.id"
            android:icon="@drawable/suggestion"/>

        <item
            android:title="@string/frequentlyAskedQuestions"
            android:id="@+id/frequentlyAskedQuestions.id"
            android:icon="@drawable/suggestion"/>
    </group>


</menu>